--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -10,36 +10,19 @@
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="415dp"
-        android:layout_height="576dp"
+        android:layout_height="match_parent"
+        android:background="@color/app_background"
+        android:contentDescription="la concha de tu madre"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="la concha de tu madre"
-        android:background="@color/app_background">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
+            android:id="@+id/linearTurnos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/linearTurnos"/>
+            android:orientation="vertical" />
     </ScrollView>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:contentDescription="la concha de la lora"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" android:layout_height="0dp">
-
-
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/app_background"/>
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
