--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/Turnos">
 
     <fragment
-        android:id="@+id/FirstFragment"
+        android:id="@+id/Turnos"
         android:name="com.example.appturnos.FirstFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_first">
@@ -23,6 +23,6 @@
 
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+            app:destination="@id/Turnos" />
     </fragment>
 </navigation>
