--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="turno_background">#059492</color>
+    <color name="primary">#059492</color>
     <color name="app_background">#e2e2e2</color>
 </resources>
