--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,7 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="add_margin">16dp</dimen>
+    <dimen name="titulo_size">8dp</dimen>
+    <dimen name="subtitulo_size">6dp</dimen>
+    <dimen name="body_size">5dp</dimen>
+
 </resources>
