--- a/app/src/main/res/layout/form_turno_fragment.xml
+++ b/app/src/main/res/layout/form_turno_fragment.xml
@@ -1,104 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/form_turno_fragment"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="50dp"
-    android:background="@color/app_background"
+    android:orientation="vertical"
+    android:background="@color/primary"
+    android:padding="40dp"
     android:gravity="center">
-
 
     <EditText
         android:id="@+id/et_nombre_cliente"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_marginBottom="20dp"
+        android:padding="14dp"
         android:hint="@string/nombreClienteHint"
         android:inputType="textPersonName"
         android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:background="@drawable/edit_text_rounded_white" />
 
     <EditText
         android:id="@+id/et_dni_cliente"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginBottom="20dp"
+        android:padding="14dp"
         android:hint="@string/dniClienteHint"
         android:inputType="number"
         android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_nombre_cliente" />
+        android:background="@drawable/edit_text_rounded_white" />
+
+    <EditText
+        android:id="@+id/et_email_cliente"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:padding="14dp"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:textColor="@color/black"
+        android:background="@drawable/edit_text_rounded_white" />
+
+
+    <LinearLayout
+        android:id="@+id/et_direccion_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:padding="0dp"
+        android:background="@drawable/edit_text_rounded_white"
+        android:orientation="horizontal">
+
+        <EditText
+            android:id="@+id/et_direccion"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="@string/direccionHint"
+            android:textColor="@color/black"
+            android:padding="14dp" />
+
+        <CheckBox
+            android:id="@+id/check_usar_direccion_guardada"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:text="Mi dirección"
+            android:textColor="@color/black" />
+    </LinearLayout>
+
+
+    <EditText
+        android:id="@+id/et_fecha_hora"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:padding="14dp"
+        android:clickable="true"
+        android:focusable="false"
+        android:hint="Fecha"
+        android:textColor="@color/black"
+        android:background="@drawable/edit_text_rounded_white" />
 
     <EditText
         android:id="@+id/et_detalle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_marginBottom="28dp"
+        android:padding="14dp"
         android:hint="@string/detalleHint"
-        android:inputType="text"
+        android:inputType="textMultiLine"
+        android:gravity="top"
         android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_dni_cliente" />
-
-    <EditText
-        android:id="@+id/et_direccion"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:hint="@string/direccionHint"
-        android:inputType="textPostalAddress"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_detalle" />
-
-    <EditText
-        android:id="@+id/et_fecha"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:hint="@string/fechaTurnoHint"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_direccion" />
-
-    <EditText
-        android:id="@+id/et_horario"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:hint="@string/horarioTurnoHint"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_fecha" />
+        android:background="@drawable/edit_text_rounded_white" />
 
     <Button
         android:id="@+id/btn_guardar_turno"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:padding="12dp"
         android:background="@color/primary"
-        android:text="@string/guardarTurnoHint"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_horario" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:textColor="@color/white"
+        android:text="@string/guardarTurnoHint" />
+</LinearLayout>
