--- a/app/src/main/res/layout/fragment_registro.xml
+++ b/app/src/main/res/layout/fragment_registro.xml
@@ -7,6 +7,7 @@
     android:padding="40dp"
     android:gravity="center">
 
+
     <EditText
         android:id="@+id/et_email"
         android:layout_width="match_parent"
@@ -22,25 +23,49 @@
         android:id="@+id/et_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="20dp"
         android:padding="14dp"
         android:hint="Password"
         android:inputType="textPassword"
         android:textColor="@color/black"
         android:background="@drawable/edit_text_rounded_white" />
 
+    <EditText
+        android:id="@+id/et_confirm_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="28dp"
+        android:padding="14dp"
+        android:hint="Confirmar Password"
+        android:inputType="textPassword"
+        android:textColor="@color/black"
+        android:background="@drawable/edit_text_rounded_white" />
+
+    <EditText
+        android:id="@+id/et_direccion"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:padding="14dp"
+        android:hint="Dirección"
+        android:inputType="textPostalAddress"
+        android:textColor="@color/black"
+        android:background="@drawable/edit_text_rounded_white" />
+
+    <Button
+        android:id="@+id/btn_register"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="12dp"
+        android:layout_marginBottom="20dp"
+        android:text="Registrarse"
+        android:background="@color/primary"/>
+
     <Button
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/primary"
-        android:text="Login" />
-
-    <Button
-        android:id="@+id/btn_go_register"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:background="@color/primary"
-        android:text="Registrarse" />
+        android:padding="12dp"
+        android:text="Login"
+        android:background="@color/primary"/>
 </LinearLayout>
